tests/parser/fail/block-param-name-collision.som
"test:
fail-message:
  - contains: foo
  - contains: defined twice
"

BlockParamNameCollision = (
  run = (
    ^[ :a :foo :b :c :foo :d | 42 ].
  )
)
